compiler/testData/diagnostics/tests/CompareToWithErrorType.fir.kt
// !WITH_NEW_INFERENCE
fun test() {
  if (<!UNRESOLVED_REFERENCE!>x<!> <!UNRESOLVED_REFERENCE!>><!> 0) {

  }
}
